# c-demo

./: .gitignore  CMakeLists.txt
c-primer-plus/data/: add_word.txt  mywords.txt  wor.red
c-primer-plus/exercise/: 10_2.c  10_3.c  12_1.c  12_4.c  13_1.c  13_2.c  14_5.c  15_1.c  15_3.c  15_4.c  16_2.c  2_1.c  2_3.c  2_4.c  2_6.c  3_1.c  3_2.c  3_4.c  4_2.c  4_3.c  4_5.c  4_6.c  5_1.c  6_1.c  6_2.c  6_3.c  6_4.c  6_5.c  7_1.c  7_3.c  9_1.c
c-primer-plus/sample/: 10_10_sum_arr1.c  10_11_sum_arr2.c  10_12_order.c  10_14_arf.c  10_15_zippo1.c  10_16_zippo2.c  10_18_vararr2d.c  10_19_flc.c  10_1_day_mon1.c  10_3_somedata.c  10_4_day_mon2.c  10_5_designate.c  10_7_array2d.c  10_8_pnt_add.c  10_9_day_mon3.c  11_11_scan_str.c  11_16_put_put.c  11_17_test_fit.c  11_18_str_cat.c  11_19_join_chk.c  11_1_strings1.c  11_21_compare.c  11_22_compback.c  11_23_quit_chk.c  11_24_starsrch.c  11_25_copy1.c  11_28_format.c  11_29_sort_str.c  11_2_strptr.c  11_30_mod_str.c  11_31_repeat.c  11_32_hello.c  11_33_strcnvt.c  11_3_addresses.c  11_5_p_and_s.c  11_6_getsputs.c  11_7_fgets1.c  11_8_fgets2.c  11_9_fgets3.c  12_10_r_drive1.c  (+135 more)
