cmake_minimum_required(VERSION 3.24)
project(c_demo C)

set(CMAKE_C_STANDARD 11)

add_executable(c_demo main.c)
add_executable(2_1_first c-primer-plus/sample/2_1_first.c)
add_executable(2_2_fathm_ft c-primer-plus/sample/2_2_fathm_ft.c)
add_executable(2_3_two_func c-primer-plus/sample/2_3_two_func.c)
add_executable(2_4_nogood c-primer-plus/sample/2_4_nogood.c)
add_executable(2_1 c-primer-plus/exercise/2_1.c)
add_executable(2_3 c-primer-plus/exercise/2_3.c)
add_executable(2_4 c-primer-plus/exercise/2_4.c)
add_executable(2_6 c-primer-plus/exercise/2_6.c)
add_executable(3_1_platinum c-primer-plus/sample/3_1_platinum.c)
add_executable(3_2_print1 c-primer-plus/sample/3_2_print1.c)
add_executable(3_3_bases c-primer-plus/sample/3_3_bases.c)
add_executable(3_4_toobig c-primer-plus/sample/3_4_toobig.c)
add_executable(3_4_print2 c-primer-plus/sample/3_4_print2.c)
add_executable(3_5_charcode c-primer-plus/sample/3_5_charcode.c)
add_executable(3_6_altnames c-primer-plus/sample/3_6_altnames.c)
add_executable(3_7_showf_pt c-primer-plus/sample/3_7_showf_pt.c)
add_executable(3_8_typesize c-primer-plus/sample/3_8_typesize.c)
add_executable(3_10_escape c-primer-plus/sample/3_10_escape.c)
add_executable(3_1 c-primer-plus/exercise/3_1.c)
add_executable(3_2 c-primer-plus/exercise/3_2.c)
add_executable(3_4 c-primer-plus/exercise/3_4.c)
add_executable(4_1_talkback c-primer-plus/sample/4_1_talkback.c)
add_executable(4_2_praise1 c-primer-plus/sample/4_2_praise1.c)
add_executable(4_3_praise2 c-primer-plus/sample/4_3_praise2.c)
add_executable(4_4_pizza c-primer-plus/sample/4_4_pizza.c)
add_executable(4_5_defines c-primer-plus/sample/4_5_defines.c)
add_executable(4_7_width c-primer-plus/sample/4_7_width.c)
add_executable(4_8_floats c-primer-plus/sample/4_8_floats.c)
add_executable(4_9_flags c-primer-plus/sample/4_9_flags.c)
add_executable(4_10_stringf c-primer-plus/sample/4_10_stringf.c)
add_executable(4_11_intconv c-primer-plus/sample/4_11_intconv.c)
add_executable(4_12_floatcnv c-primer-plus/sample/4_12_floatcnv.c)
add_executable(4_13_prntval c-primer-plus/sample/4_13_prntval.c)
add_executable(4_4_longstrg c-primer-plus/sample/4_4_longstrg.c)
add_executable(4_15_input c-primer-plus/sample/4_15_input.c)
add_executable(4_16_varwid c-primer-plus/sample/4_16_varwid.c)
add_executable(4_17_skip2 c-primer-plus/sample/4_17_skip2.c)
add_executable(4_2 c-primer-plus/exercise/4_2.c)
add_executable(4_3 c-primer-plus/exercise/4_3.c)
add_executable(4_5 c-primer-plus/exercise/4_5.c)
add_executable(4_6 c-primer-plus/exercise/4_6.c)
add_executable(5_1_shoes1 c-primer-plus/sample/5_1_shoes1.c)
add_executable(5_2_shoes2 c-primer-plus/sample/5_2_shoes2.c)
add_executable(5_3_golf c-primer-plus/sample/5_3_golf.c)
add_executable(5_4_squares c-primer-plus/sample/5_4_squares.c)
add_executable(5_6_divide c-primer-plus/sample/5_6_divide.c)
add_executable(5_7_rules c-primer-plus/sample/5_7_rules.c)
add_executable(5_9_min_sec c-primer-plus/sample/5_9_min_sec.c)