cmake_minimum_required(VERSION 3.24)
project(c_demo C)

set(CMAKE_C_STANDARD 11)

add_executable(c_demo main.c)
add_executable(2_1_first c-primer-plus/sample/2_1_first.c)
add_executable(2_2_fathm_ft c-primer-plus/sample/2_2_fathm_ft.c)
add_executable(2_3_two_func c-primer-plus/sample/2_3_two_func.c)
add_executable(2_4_nogood c-primer-plus/sample/2_4_nogood.c)
add_executable(2_1 c-primer-plus/exercise/2_1.c)
add_executable(2_3 c-primer-plus/exercise/2_3.c)
add_executable(2_4 c-primer-plus/exercise/2_4.c)
add_executable(2_6 c-primer-plus/exercise/2_6.c)
add_executable(3_1_platinum c-primer-plus/sample/3_1_platinum.c)
add_executable(3_2_print1 c-primer-plus/sample/3_2_print1.c)
add_executable(3_3_bases c-primer-plus/sample/3_3_bases.c)
add_executable(3_4_toobig c-primer-plus/sample/3_4_toobig.c)
add_executable(3_4_print2 c-primer-plus/sample/3_4_print2.c)
add_executable(3_5_charcode c-primer-plus/sample/3_5_charcode.c)
add_executable(3_6_altnames c-primer-plus/sample/3_6_altnames.c)
add_executable(3_7_showf_pt c-primer-plus/sample/3_7_showf_pt.c)
add_executable(3_8_typesize c-primer-plus/sample/3_8_typesize.c)
add_executable(3_10_escape c-primer-plus/sample/3_10_escape.c)
add_executable(3_1 c-primer-plus/exercise/3_1.c)
add_executable(3_2 c-primer-plus/exercise/3_2.c)
add_executable(3_4 c-primer-plus/exercise/3_4.c)
add_executable(4_1_talkback c-primer-plus/sample/4_1_talkback.c)
add_executable(4_2_praise1 c-primer-plus/sample/4_2_praise1.c)
add_executable(4_3_praise2 c-primer-plus/sample/4_3_praise2.c)
add_executable(4_4_pizza c-primer-plus/sample/4_4_pizza.c)
add_executable(4_5_defines c-primer-plus/sample/4_5_defines.c)
add_executable(4_7_width c-primer-plus/sample/4_7_width.c)
add_executable(4_8_floats c-primer-plus/sample/4_8_floats.c)
add_executable(4_9_flags c-primer-plus/sample/4_9_flags.c)
add_executable(4_10_stringf c-primer-plus/sample/4_10_stringf.c)
add_executable(4_11_intconv c-primer-plus/sample/4_11_intconv.c)
add_executable(4_12_floatcnv c-primer-plus/sample/4_12_floatcnv.c)
add_executable(4_13_prntval c-primer-plus/sample/4_13_prntval.c)
add_executable(4_4_longstrg c-primer-plus/sample/4_4_longstrg.c)
add_executable(4_15_input c-primer-plus/sample/4_15_input.c)
add_executable(4_16_varwid c-primer-plus/sample/4_16_varwid.c)
add_executable(4_17_skip2 c-primer-plus/sample/4_17_skip2.c)
add_executable(4_2 c-primer-plus/exercise/4_2.c)
add_executable(4_3 c-primer-plus/exercise/4_3.c)
add_executable(4_5 c-primer-plus/exercise/4_5.c)
add_executable(4_6 c-primer-plus/exercise/4_6.c)
add_executable(5_1_shoes1 c-primer-plus/sample/5_1_shoes1.c)
add_executable(5_2_shoes2 c-primer-plus/sample/5_2_shoes2.c)
add_executable(5_3_golf c-primer-plus/sample/5_3_golf.c)
add_executable(5_4_squares c-primer-plus/sample/5_4_squares.c)
add_executable(5_6_divide c-primer-plus/sample/5_6_divide.c)
add_executable(5_7_rules c-primer-plus/sample/5_7_rules.c)
add_executable(5_9_min_sec c-primer-plus/sample/5_9_min_sec.c)
add_executable(5_10_add_one c-primer-plus/sample/5_10_add_one.c)
add_executable(5_11_post_pre c-primer-plus/sample/5_11_post_pre.c)
add_executable(5_12_bottles c-primer-plus/sample/5_12_bottles.c)
add_executable(5_14_convert c-primer-plus/sample/5_14_convert.c)
add_executable(5_15_pound c-primer-plus/sample/5_15_pound.c)
add_executable(5_16_running c-primer-plus/sample/5_16_running.c)
add_executable(5_1 c-primer-plus/exercise/5_1.c)
add_executable(6_1_summing c-primer-plus/sample/6_1_summing.c)
add_executable(6_2_when c-primer-plus/sample/6_2_when.c)
add_executable(6_3_while1 c-primer-plus/sample/6_3_while1.c)
add_executable(6_5_cmpflt c-primer-plus/sample/6_5_cmpflt.c)
add_executable(6_6_t_and_f c-primer-plus/sample/6_6_t_and_f.c)
add_executable(6_7_truth c-primer-plus/sample/6_7_truth.c)
add_executable(6_8_trouble c-primer-plus/sample/6_8_trouble.c)
add_executable(6_9_boolean c-primer-plus/sample/6_9_boolean.c)
add_executable(6_10_sweetie1 c-primer-plus/sample/6_10_sweetie1.c)
add_executable(6_11_sweetie2 c-primer-plus/sample/6_11_sweetie2.c)
add_executable(6_14_zeno c-primer-plus/sample/6_14_zeno.c)
add_executable(6_15_do_while c-primer-plus/sample/6_15_do_while.c)
add_executable(6_17_rows1 c-primer-plus/sample/6_17_rows1.c)
add_executable(6_19_scores_in c-primer-plus/sample/6_19_scores_in.c)
add_executable(6_20_power c-primer-plus/sample/6_20_power.c)
add_executable(6_1 c-primer-plus/exercise/6_1.c)
add_executable(6_2 c-primer-plus/exercise/6_2.c)
add_executable(6_3 c-primer-plus/exercise/6_3.c)
add_executable(6_4 c-primer-plus/exercise/6_4.c)
add_executable(6_5 c-primer-plus/exercise/6_5.c)
add_executable(7_1_colddays c-primer-plus/sample/7_1_colddays.c)
add_executable(7_2_cypher1 c-primer-plus/sample/7_2_cypher1.c)
add_executable(7_3_cypher2 c-primer-plus/sample/7_3_cypher2.c)
add_executable(7_4_electric c-primer-plus/sample/7_4_electric.c)
add_executable(7_5_divisors c-primer-plus/sample/7_5_divisors.c)
add_executable(7_6_chcount c-primer-plus/sample/7_6_chcount.c)
add_executable(7_7_wordcnt c-primer-plus/sample/7_7_wordcnt.c)
add_executable(7_8_paint c-primer-plus/sample/7_8_paint.c)
add_executable(7_9_skippart c-primer-plus/sample/7_9_skippart.c)
add_executable(7_10_break c-primer-plus/sample/7_10_break.c)
add_executable(7_12_vowels c-primer-plus/sample/7_12_vowels.c)
add_executable(7_1 c-primer-plus/exercise/7_1.c)
add_executable(7_3 c-primer-plus/exercise/7_3.c)
add_executable(8_1_echo c-primer-plus/sample/8_1_echo.c)
add_executable(8_2_echo_eof c-primer-plus/sample/8_2_echo_eof.c)
add_executable(8_7_checking c-primer-plus/sample/8_7_checking.c)
add_executable(9_1_lethead1 c-primer-plus/sample/9_1_lethead1.c)
add_executable(9_2_lethead2 c-primer-plus/sample/9_2_lethead2.c)
add_executable(9_3_lesser c-primer-plus/sample/9_3_lesser.c)
add_executable(9_4_misuse c-primer-plus/sample/9_4_misuse.c)
add_executable(9_5_proto c-primer-plus/sample/9_5_proto.c)
add_executable(9_6_recur c-primer-plus/sample/9_6_recur.c)
add_executable(9_8_binary c-primer-plus/sample/9_8_binary.c)
add_executable(9_9_usehotel c-primer-plus/sample/9_9_usehotel.c
        c-primer-plus/sample/9_10_hotel.c)
add_executable(9_12_loccheck c-primer-plus/sample/9_12_loccheck.c)
add_executable(9_13_swap1 c-primer-plus/sample/9_13_swap1.c)
add_executable(9_15_swap3 c-primer-plus/sample/9_15_swap3.c)
add_executable(9_1 c-primer-plus/exercise/9_1.c)
add_executable(10_1_day_mon1 c-primer-plus/sample/10_1_day_mon1.c)
add_executable(10_3_somedata c-primer-plus/sample/10_3_somedata.c)
add_executable(10_4_day_mon2 c-primer-plus/sample/10_4_day_mon2.c)
add_executable(10_5_designate c-primer-plus/sample/10_5_designate.c)
add_executable(10_8_pnt_add c-primer-plus/sample/10_8_pnt_add.c)
add_executable(10_9_day_mon3 c-primer-plus/sample/10_9_day_mon3.c)
add_executable(10_10_sum_arr1 c-primer-plus/sample/10_10_sum_arr1.c)
add_executable(10_11_sum_arr2 c-primer-plus/sample/10_11_sum_arr2.c)
add_executable(10_12_order c-primer-plus/sample/10_12_order.c)
add_executable(10_14_arf c-primer-plus/sample/10_14_arf.c)
add_executable(10_15_zippo1 c-primer-plus/sample/10_15_zippo1.c)
add_executable(10_16_zippo2 c-primer-plus/sample/10_16_zippo2.c)
add_executable(10_7_array2d c-primer-plus/sample/10_7_array2d.c)
add_executable(10_18_vararr2d c-primer-plus/sample/10_18_vararr2d.c)
add_executable(10_19_flc c-primer-plus/sample/10_19_flc.c)
add_executable(10_2 c-primer-plus/exercise/10_2.c)
add_executable(10_3 c-primer-plus/exercise/10_3.c)
add_executable(11_1_strings1 c-primer-plus/sample/11_1_strings1.c)
add_executable(11_2_strptr c-primer-plus/sample/11_2_strptr.c)
add_executable(11_3_addresses c-primer-plus/sample/11_3_addresses.c)
add_executable(11_5_p_and_s c-primer-plus/sample/11_5_p_and_s.c)
add_executable(11_6_getsputs c-primer-plus/sample/11_6_getsputs.c)
add_executable(11_7_fgets1 c-primer-plus/sample/11_7_fgets1.c)
add_executable(11_8_fgets2 c-primer-plus/sample/11_8_fgets2.c)
add_executable(11_9_fgets3 c-primer-plus/sample/11_9_fgets3.c)
add_executable(11_11_scan_str c-primer-plus/sample/11_11_scan_str.c)
add_executable(11_16_put_put c-primer-plus/sample/11_16_put_put.c)
add_executable(11_17_test_fit c-primer-plus/sample/11_17_test_fit.c)
add_executable(11_18_str_cat c-primer-plus/sample/11_18_str_cat.c)
add_executable(11_19_join_chk c-primer-plus/sample/11_19_join_chk.c c-primer-plus/sample/my_string.c)
add_executable(11_20_nogo c-primer-plus/sample/11_21_compare.c c-primer-plus/sample/my_string.c)
add_executable(11_22_compback c-primer-plus/sample/11_22_compback.c)
add_executable(11_23_quit_chk c-primer-plus/sample/11_23_quit_chk.c c-primer-plus/sample/my_string.c)
add_executable(11_24_starsrch c-primer-plus/sample/11_24_starsrch.c)
add_executable(11_25_copy1 c-primer-plus/sample/11_25_copy1.c c-primer-plus/sample/my_string.c)
add_executable(11_28_format c-primer-plus/sample/11_28_format.c c-primer-plus/sample/my_string.c)